--- a/buildspec.yml
+++ b/buildspec.yml
@@ -5,16 +5,16 @@ phases:
     runtime-versions:
       nodejs: 14
     commands:
-      - echo Installing source NPM dependencies...
+      - echo Installing dependencies...
       - cd src
       - npm install
   build:
     commands:
       - echo Build started on `date`
-      - echo Building the Node.js app...
       - npm run build
+
 artifacts:
   files:  
-    - src/**/dist/**/*
-  base-directory: src 
+    - dist/**/*
+  base-directory: src
   discard-paths: yes
