--- a/buildspec.yml
+++ b/buildspec.yml
@@ -3,11 +3,10 @@ version: 0.2
 phases:
   install:
     runtime-versions:
-      nodejs: 18  # or 16 if you prefer
+      nodejs: 18
     commands:
       - echo Installing dependencies...
-      - cd src
-      - npm install
+      - npm install  # no more cd src
   build:
     commands:
       - echo Build started on `date`
@@ -16,5 +15,5 @@ phases:
 artifacts:
   files:  
     - dist/**/*
-  base-directory: src
+  base-directory: .  # root folder
   discard-paths: yes
