--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "type": "commonjs",
   "dependencies": {
     "dom": "^0.0.3",
-    "react": "^19.1.1"
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1"
   },
   "devDependencies": {
     "parcel": "^2.15.4"
